--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
   "dependencies": {
+  },
+  "peerDependencies": {
+    "eslint-plugin-react": "^3.1.0",
     "babel-eslint": "^4.0.5",
-    "eslint": "^0.24.1",
-    "eslint-plugin-react": "^3.1.0"
+    "eslint": "^0.24.1"
   }
 }
