--- a/package.json
+++ b/package.json
@@ -18,10 +18,5 @@
     "url": "https://github.com/bengler/eslint-config-bengler/issues"
   },
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
-  "dependencies": {},
-  "peerDependencies": {
-    "eslint-plugin-react": "^3.1.0",
-    "babel-eslint": "^4.0.5",
-    "eslint": "^0.24.1"
-  }
+  "dependencies": {}
 }
