Depend upon eslint package for that nifty thing called lint

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "url": "https://github.com/bengler/eslint-config-bengler/issues"
   },
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^1.3.1"
+  }
 }
