--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.2.14",
   "description": "Shared eslint configs for Bengler",
   "main": "base.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint .",
+    "diff": "node ./bin/diff.js && echo '\nnpm update eslint to get latest rules'"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bengler/eslint-config-bengler.git"
@@ -20,6 +23,8 @@
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^1.3.1"
+    "eslint": "^1.5.1",
+    "eslint-plugin-react": "^3.5.1",
+    "lodash.difference": "^3.2.2"
   }
 }
