Adjust config to eslint 2.x

--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   },
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
   "dependencies": {},
+  "peerDependencies": {
+    "eslint": "^2.1"
+  },
   "devDependencies": {
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint": "^2.2.0",
+    "eslint-plugin-import": "^1.0.0",
+    "eslint-plugin-react": "^4.1.0",
     "lodash.difference": "^3.2.2"
   }
 }
