--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
   "dependencies": {},
   "peerDependencies": {
-    "eslint": "^2.12.0"
+    "eslint": "^3.x"
   },
   "devDependencies": {
-    "eslint": "^2.12.0",
-    "eslint-plugin-import": "^1.0.0",
-    "eslint-plugin-react": "^4.3.0",
-    "lodash.difference": "^3.2.2"
+    "eslint": "^3.3.1",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-react": "^6.1.2",
+    "lodash.difference": "^4.5.0"
   }
 }
