--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "homepage": "https://github.com/bengler/eslint-config-bengler#readme",
   "dependencies": {},
   "peerDependencies": {
-    "eslint": "^3.x"
+    "eslint": "^4.6"
   },
   "devDependencies": {
-    "eslint": "^3.18.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.2",
+    "eslint": "^4.6.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.3.0",
     "lodash.difference": "^4.5.0"
   }
 }
